--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
 
     <div class="container">
-        <div class="row d-flex text-center mt-3">
+        <div class="row d-flex text-center m-3">
             <div class="col-12 col-lg-4">
                         <img src="assets/img/atrevete.png" class="rounded-circle" alt="tendencias"> </div>
                         <div class="col-12 col-lg-4">
