--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,7 +7,7 @@
     <title>Sugarmaga | Tienda online</title>
 </head>
 <body>
-
+<header>
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12 col-lg-12">
@@ -52,7 +52,7 @@
                 </div>
             </div>
         </div>
-
+    </header>
 <main>
     <div class="container-fluid bg-primary">
         <div class="row">
@@ -61,6 +61,7 @@
             </div>
         </div>
     </div>
+    
 <div class="container-fluid">
     <div class="row">
         <div class="col-12">
@@ -86,20 +87,21 @@
 
         <div class="mb-3">
             <label class="form-label"> Whatsapp </label>
-            <input type="text" class="form-control" placeholder="email">
+            <input type="text" class="form-control" placeholder="Whatsapp">
         </div>
             <div class="mb-3">
                 <label class="form-label"> mail </label>
                 <input type="text" class="form-control" placeholder="email">
             </div>
             <div class="mb-3">
-                <label class="form-label"> mail </label>
-                <textarea name="" class="form-control" placeholder="email">
+                <label class="form-label"> Deja tus comentarios aquí</label>
+                <textarea name="" class="form-control" placeholder="comentarios">
                 </textarea>
                 <div class="mb-3 form-check">
                     <input type="checkbox" class="form-check-input" id="exampleCheck1">
                     <label class="form-check-label" for="exampleCheck1">Suscribirse al newsletter</label>
-                  </div>
+                </div>
+                <button type="submit" class="btn btn-primary">Enviar</button>
             </div>
         </div>
     </div>
