--- a/pages/productos.html
+++ b/pages/productos.html
@@ -1,32 +1,66 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap" rel="stylesheet">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="../css/style.css">
-    <title>Sugarmaga | Tienda Online</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <title>Sugarmaga | Tienda online</title>
 </head>
 <body>
-    <div class="gridPrincipal">
-        <header>
-        <div class="logoHeader"><a href="../index.html"><img src="../assets/img/logoletter.png" alt="logo"></a></div>
-        <nav class="navBar" data-aos="fade-right">
-            <ul>
-                <li><a href="../index.html">HOME</a></li>
-                <li><a href="../pages/productos.html">PRODUCTOS</a></li>
-                <li><a href="../pages/aboutus.html">NOSOTROS</a></li>
-                <li><a href="../pages/contacto.html">CONTACTO</a></li>
-                <li><a href="../pages/preguntasfrecuentes.html">PREGUNTAS FRECUENTES</a></li>
-            </ul>
-        </nav>
-
+<header>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-12 col-lg-12">
+                    <nav class="navbar navbar-expand-lg navbar-light bg-light"> 
+                        <div class="container-fluid">
+                            <a class="navbar-brand" href="../index.html"><img src="../assets/img/logoletter.png" alt="logo"></a>
+                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                                <span class="navbar-toggler-icon"></span>
+                            </button>
+                            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                                    <li class="nav-item">
+                                        <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="aboutus.html">Sobre Nosotros</a>
+                                    </li>
+                                    <li class="nav-item dropdown">
+                                        <a class="nav-link dropdown-toggle" href="productos.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Productos
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" href="productos.html">Aros</a></li>
+                                    <li><a class="dropdown-item" href="/productos.html">Llaveros</a></li>
+                                    <li><hr class="dropdown-divider"></li>
+                                    <li><a class="dropdown-item" href="contacto.html">Personalizados</a></li>
+                                </ul>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="contacto.html">Contacto</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="preguntasfrecuentes.html">Preguntas Frecuentes</a>
+                                </li>
+                                    </li>
+                                </ul>
+                                <form class="d-flex">
+                                    <input class="form-control me-2" type="search" placeholder="¿Qué buscás?" aria-label="Search">
+                                    <button class="btn btn-outline-success" type="submit">Buscar</button>
+                                </form>
+                            </div>
+                        </div>
+                    </nav>
+                </div>
+            </div>
+        </div>
     </header>
-    <main>
+<main>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12">
+            <h2 class="text-center p-3">Colección</h2>
+            </div>
+        </div>
+    </div>
         <section class="categorias">
         <div class="categorias-items" style="background-image: url(../assets/img/arogigante.jpg);";>
         <p class="textoDestacado"> AROS</p>
@@ -59,22 +93,25 @@
         </section>
     </main>
     <footer>
-        <div class="logoFooter"><a href="#"><img class="logoFooter" src="../assets/img/logoblanco.jpg" alt="logo" width="100" height="100"></a>
-        </div>
-        <div class="contactanos">
-            <ul>
-            <li><a href="mailto:sugarmaga.acc@gmail.com" target="_blank"><img src="../assets/img/mail.png" alt="mail"width="27" height="27"></a></li>
-            <li><a href="https://api.whatsapp.com/send?phone=123" target="_blank"><img src="../assets/img/whatsapp.png" alt="whatsapp" width="27" height="27"></a></li>
-            <li><a href="https://www.instagram.com/sugarmaga/" target="_blank"><img src="../assets/img/instagram.png" alt="instagram" width="27" height="27"> </a></li>
-            <li><a href="https://www.facebook.com/Sugarmaga-102805014935225/" target="_blank"><img src="../assets/img/facebook.png" alt="facebook" width="27" height="27"></a></li>
-            <li><a href="https://www.tiktok.com/@sugarmagaacc" target="_blank"><img src="../assets/img/tiktok.png" alt="Tiktok" width="27" height="27"></a></li>
-            </ul>
+        <div class="container mt-3">
+            <div class="row text-center">
+                <div class="col-3 col-lg-3">
+                    <a href="https://www.instagram.com/sugarmaga/" target="_blank"><img src="../assets/img/instagram.png" alt="instagram" width="27" height="27"></a>
+                </div>
+                <div class="col-3 col-lg-3">
+                    <a href="https://api.whatsapp.com/send?phone=123" target="_blank"><img src="../assets/img/whatsapp.png" alt="whatsapp" width="27" height="27"></a>
+                </div>
+                <div class="col-3 col-lg-3">
+                    <a href="mailto:sugarmaga.acc@gmail.com" target="_blank"><img src="../assets/img/mail.png" alt="mail"width="27" height="27"></a>
+                </div>
+                <div class="col-3 col-lg-3">
+                <a href="https://www.tiktok.com/@sugarmagaacc" target="_blank"><img src="../assets/img/tiktok.png" alt="Tiktok" width="27" height="27"></a>
+                </div>
+            </div>
         </div>
     </footer>
-</div>
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script>
-    AOS.init();
-</script>
-</body>
-</html>
+    
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    
+    </body>
+    </html>
