añadi bootstrap resto de las páginas

--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -54,7 +54,26 @@
         </div>
 
 <main>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12">
+            <h2 class="text-center p-3">Sobre nosotros</h2>
+            </div>
+        </div>
+    </div>
 
+    <div class="container-fluid">
+        <div class="row justify-content-center align-items-center">
+            <div class="col-10 col-md8 col-lg-4">
+                <img src="../assets/img/aboutus.png" alt="about us">
+            </div>
+            <div class="col-10 col-md-8 col-lg-7 mt-lg-5 col-xl-5">
+                <h2><strong>¡QUIÉN ES SUGARMAGA?</strong></h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque maxime voluptate omnis mollitia eligendi totam, optio ea. Enim quaerat provident ducimus, impedit consequuntur corrupti autem unde repellendus voluptatem quidem alias?</p>
+            </div>
+            </div>
+        </div>
+    </div>
 
 </main>
 <footer>
