--- a/pages/productos.html
+++ b/pages/productos.html
@@ -61,36 +61,100 @@
             </div>
         </div>
     </div>
-        <section class="categorias">
-        <div class="categorias-items" style="background-image: url(../assets/img/arogigante.jpg);";>
-        <p class="textoDestacado"> AROS</p>
+
+    <div class="container">
+        <div class="row text-center justify-content-center">
+                <div class="row row-cols-1 row-cols-md-3 g-4">
+                    <div class="col">
+                        <div class="card">
+                            <img src="../assets/img/arogigante.jpg" class="card-img-top" alt="aros elegantes">
+                                <div class="card-body">
+                                    <h5 class="card-title">ELEGANCE</h5>
+                                </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card">
+                            <img src="../assets/img/arogigante.jpg" class="card-img-top" alt="aros elegante">
+                                <div class="card-body">
+                                    <h5 class="card-title">NIGHT OUT</h5>
+                                </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card">
+                            <img src="../assets/img/arogigante.jpg" class="card-img-top" alt="aro elegante">
+                                <div class="card-body">
+                                    <h5 class="card-title">SPRING VIBES</h5>
+                                </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="categorias-items" style="background-image: url(../assets/img/collarelegante.png) ;">
-            <p class="textoDestacado"> COLLARES</p>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-lg-12">
+                <div class="card bg-dark text-black">
+                    <img src="../assets/img/bannerproductos.jpg" class="card-img" alt="lentes">
+                    <div class="card-img-overlay">
+                        <h1 class="card-title"><strong>WILD</strong></h1>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="categorias-items" style="background-image: url(../assets/img/arossostenidos.jpg) ;">
-            <p class="textoDestacado"> PIERCINGS</p>
+    </div>
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12">
+            <h2 class="text-center p-4">SPRING VIBES</h2>
+            </div>
         </div>
-        <div class="categorias-items" style="background-image: url(../assets/img/bannerproductos.jpg) ;">
-            <p class="textoDestacado"> SPRING VIBES</p>
+
+        <div class="container text-center">
+            <div class="row">
+                <div class=" col-12 col-lg-12">
+                    <div class="row row-cols-1 row-cols-md-3 g-4">
+                        <div class="col">
+                            <div class="card">
+                                <img src="../assets/img/gorro.jpg" class="card-img-top" alt="gorro">
+                                    <div class="card-body">
+                                        <h5 class="card-title">GORROS</h5>
+                                        <p class="card-text">$2 peso</p>
+                                        <a href="#" class="btn btn-primary">SHOP NOW</a>
+                                    </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card h-100">
+                                <img src="../assets/img/lentes.jpg" class="card-img-top" alt="lentes">
+                                    <div class="card-body">
+                                        <h5 class="card-title">LENTES</h5>
+                                        <p class="card-text">$5 peso</p>
+                                        <a href="#" class="btn btn-primary">SHOP NOW</a>
+                                    </div>
+                                </div>
+                            </div>
+                        <div class="col">
+                            <div class="card">
+                                <img src="../assets/img/gorro.jpg" class="card-img-top" alt="gorro">
+                                    <div class="card-body">
+                                        <h5 class="card-title">product</h5>
+                                        <p class="card-text">100$</p>
+                                        <a href="#" class="btn btn-primary">SHOP NOW</a>
+                                    </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        </section>
-        <div class="tituloProd"> <h2>PRODUCTOS MÁS VENDIDOS</h2></div>
-        <section class="productosDestacados">
-            <div class="prodDestItem" style="background-image: url(../assets/img/collarelegante.png) ;"></div> 
-            <div class="prodDestItem" style="background-image: url(../assets/img/collarelegante.png) ;"></div> 
-            <div class="prodDestItem" style="background-image: url(../assets/img/collarelegante.png) ;"></div> 
-            <button>Ver producto</button><button>Ver producto</button> <button>Ver producto</button>
-        </section>
-        <div class="tituloProd"> <h2>MÁS VISTOS</h2></div>
-        <section class="productosVistos">
-            <div class="prodDestItem" style="background-image: url(../assets/img/lentes.jpg) ;">
-                <p class="textoDestacado">LENTES</p></div> 
-            
-            <div class="prodDestItem" style="background-image: url(../assets/img/gorro.jpg) ;">
-                <p class="textoDestacado"> GORROS</p> </div> 
-            
-        </section>
+
+
+
     </main>
     <footer>
         <div class="container mt-3">
