--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Sugarmaga | Tienda online</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 
@@ -112,8 +113,8 @@
     </div>
 </main>
 
-<footer>
-    <div class="container mt-3">
+<footer style="background-image: url('https://i.postimg.cc/PJvb5DPV/Dise-o-sin-t-tulo.png');">
+    <div class="container mt-3 p-3">
         <div class="row text-center">
             <div class="col-3 col-lg-3">
                 <a href="https://www.instagram.com/sugarmaga/" target="_blank"><img src="assets/img/instagram.png" alt="instagram" width="27" height="27"></a>
@@ -131,7 +132,7 @@
     </div>
 </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 </body>
 </html>
