--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -30,7 +30,7 @@
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                     <li><a class="dropdown-item" href="productos.html">Aros</a></li>
-                                    <li><a class="dropdown-item" href="/productos.html">Llaveros</a></li>
+                                    <li><a class="dropdown-item" href="productos.html">Llaveros</a></li>
                                     <li><hr class="dropdown-divider"></li>
                                     <li><a class="dropdown-item" href="contacto.html">Personalizados</a></li>
                                 </ul>
@@ -76,8 +76,8 @@
     </div>
 
 </main>
-<footer>
-    <div class="container mt-3">
+<footer style="background-image: url('https://i.postimg.cc/PJvb5DPV/Dise-o-sin-t-tulo.png');">
+    <div class="container mt-3 p-3">
         <div class="row text-center">
             <div class="col-3 col-lg-3">
                 <a href="https://www.instagram.com/sugarmaga/" target="_blank"><img src="../assets/img/instagram.png" alt="instagram" width="27" height="27"></a>
