--- a/pages/productos.html
+++ b/pages/productos.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Sugarmaga | Tienda online</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 <header>
@@ -30,7 +31,7 @@
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                     <li><a class="dropdown-item" href="productos.html">Aros</a></li>
-                                    <li><a class="dropdown-item" href="/productos.html">Llaveros</a></li>
+                                    <li><a class="dropdown-item" href="productos.html">Llaveros</a></li>
                                     <li><hr class="dropdown-divider"></li>
                                     <li><a class="dropdown-item" href="contacto.html">Personalizados</a></li>
                                 </ul>
@@ -139,13 +140,15 @@
                                 </div>
                             </div>
                         <div class="col">
+                            <div id="ocultar">
                             <div class="card">
                                 <img src="../assets/img/gorro.jpg" class="card-img-top" alt="gorro">
                                     <div class="card-body">
-                                        <h5 class="card-title">product</h5>
+                                        <h5 class="card-title">GORRO</h5>
                                         <p class="card-text">100$</p>
                                         <a href="#" class="btn btn-primary">SHOP NOW</a>
                                     </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -156,8 +159,8 @@
 
 
     </main>
-    <footer>
-        <div class="container mt-3">
+    <footer style="background-image: url('https://i.postimg.cc/PJvb5DPV/Dise-o-sin-t-tulo.png');">
+        <div class="container mt-3 p-3">
             <div class="row text-center">
                 <div class="col-3 col-lg-3">
                     <a href="https://www.instagram.com/sugarmaga/" target="_blank"><img src="../assets/img/instagram.png" alt="instagram" width="27" height="27"></a>
