--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Sugarmaga | Tienda online</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 
@@ -61,20 +62,44 @@
             </div>
         </div>
     </div>
-
+<div class="about-us">
     <div class="container-fluid">
         <div class="row justify-content-center align-items-center">
             <div class="col-10 col-md8 col-lg-4">
-                <img src="../assets/img/aboutus.png" alt="about us">
+                <img src="../assets/img/CORAZONES.png" alt="about us">
             </div>
             <div class="col-10 col-md-8 col-lg-7 mt-lg-5 col-xl-5">
                 <h2><strong>¡QUIÉN ES SUGARMAGA?</strong></h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque maxime voluptate omnis mollitia eligendi totam, optio ea. Enim quaerat provident ducimus, impedit consequuntur corrupti autem unde repellendus voluptatem quidem alias?</p>
             </div>
+        </div>
+    </div>
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12">
+            <h2 class="text-center p-3">LIFE IS GOOD</h2>
             </div>
         </div>
     </div>
 
+    <div class="container-fluid">
+        <div class="row justify-content-center align-items-center">
+            <div class="col-10 col-md8 col-lg-4">
+                <h2><strong>Nuestros valores</strong></h2>
+                <ul>
+                    <li>♥ ffsfsd</li>
+                    <li>♥ ffsfsd</li>
+                    <li>♥ ffsfsd</li>
+                    <li>♥ ffsfsd</li>
+                </ul>
+            </div>
+            <div class="col-10 col-md-8 col-lg-7 mt-lg-5 col-xl-5">
+                <img src="../assets/img/CORAZONES.png" alt="about us">
+            </div>
+        </div>
+    </div>
+</div>
 </main>
 <footer style="background-image: url('https://i.postimg.cc/PJvb5DPV/Dise-o-sin-t-tulo.png');">
     <div class="container mt-3 p-3">
