--- a/pages/productos.html
+++ b/pages/productos.html
@@ -94,7 +94,7 @@
             </div>
         </div>
     </div>
-
+<div class="oculto">
     <div class="container">
         <div class="row">
             <div class="col-12 col-lg-12">
@@ -107,6 +107,7 @@
             </div>
         </div>
     </div>
+</div>
 
     <div class="container-fluid">
         <div class="row">
@@ -130,7 +131,7 @@
                             </div>
                         </div>
                         <div class="col">
-                            <div class="card h-100">
+                            <div class="card">
                                 <img src="../assets/img/lentes.jpg" class="card-img-top" alt="lentes">
                                     <div class="card-body">
                                         <h5 class="card-title">LENTES</h5>
@@ -140,7 +141,6 @@
                                 </div>
                             </div>
                         <div class="col">
-                            <div id="ocultar">
                             <div class="card">
                                 <img src="../assets/img/gorro.jpg" class="card-img-top" alt="gorro">
                                     <div class="card-body">
@@ -148,14 +148,12 @@
                                         <p class="card-text">100$</p>
                                         <a href="#" class="btn btn-primary">SHOP NOW</a>
                                     </div>
-                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-
 
 
     </main>
