--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="pages/preguntasfrecuentes.html">Preguntas Frecuentes</a>
                                 </li>
-                                    </li>
                                 </ul>
                                 <form class="d-flex">
                                     <input class="form-control me-2" type="search" placeholder="¿Qué buscás?" aria-label="Search">
@@ -55,7 +54,7 @@
         </div>
 
 
-<main>
+<div>
     <div class="container">
         <div class="row">
             <div class="col-12 col-lg-12">
@@ -102,11 +101,10 @@
             <div class="col-12 col-lg-12">
                 <div class="card">
                     <div class="card-body text-center">
-                        <img src="assets/img/ubicacion.png" class="ubicacion" alt="ubicacion" width="5%;">
+                        <img src="assets/img/ubicacion.png" class="ubicacion" alt="ubicacion" width="30px;">
                         <h2 class="card-text">¿Dónde estamos?</h2>
                     </div>
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26327.981407867595!2d-58.57584515!3d-34.426814150000006!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bca5a2d0ddb9b1%3A0x2c1a974c67cba1e4!2sTigre%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1661913750774!5m2!1ses-419!2sar"  class="card-img-top"></iframe>
-                    
                 </div>
             </div>
         </div>
