--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -41,7 +41,6 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="preguntasfrecuentes.html">Preguntas Frecuentes</a>
                                 </li>
-                                    </li>
                                 </ul>
                                 <form class="d-flex">
                                     <input class="form-control me-2" type="search" placeholder="¿Qué buscás?" aria-label="Search">
@@ -78,10 +77,10 @@
             <div class="row">
                 <div class="col mb-3">
             <label class="form-label">Nombre</label>
-            <input type="text" class="form-control" placholder="first name">
+            <input type="text" class="form-control" placholder="nombre">
                 </div>
             <div class="col mb-3">
-                <label class="ombre">Instagram</label>
+                <label class="form-label">Instagram</label>
                 <input type="text" class="form-control" placholder="Apellido">
             </div>
         </div>
@@ -95,7 +94,7 @@
             </div>
             <div class="mb-3">
                 <label class="form-label"> Deja tus comentarios aquí</label>
-                <textarea name="" class="form-control" placeholder="comentarios">
+                <textarea  class="form-control" placeholder="comentarios">
                 </textarea>
                 <div class="mb-3 form-check">
                     <input type="checkbox" class="form-check-input" id="exampleCheck1">
