--- a/pages/productos.html
+++ b/pages/productos.html
@@ -41,7 +41,6 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="preguntasfrecuentes.html">Preguntas Frecuentes</a>
                                 </li>
-                                    </li>
                                 </ul>
                                 <form class="d-flex">
                                     <input class="form-control me-2" type="search" placeholder="¿Qué buscás?" aria-label="Search">
@@ -115,7 +114,7 @@
             <h2 class="text-center p-4">SPRING VIBES</h2>
             </div>
         </div>
-
+    </div>
         <div class="container text-center">
             <div class="row">
                 <div class=" col-12 col-lg-12">
